# eccles-esp32-smart-bike

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
android-app/: README.md
android-app/source/: settings.gradle.kts
android-app/source/app/: build.gradle.kts
android-app/source/app/src/androidTest/java/starking/eccles/smartbike/: ExampleInstrumentedTest.java
android-app/source/app/src/main/: AndroidManifest.xml
android-app/source/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-app/source/app/src/main/cpp/eccles/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandTypes.h  ConversationAudio.cpp  ConversationAudio.h  Eccles.h  EcclesTypes.cpp  EcclesTypes.h  Engine.cpp  Engine.h  MessageQueue.h  Transport.cpp  Transport.h  main.cpp
android-app/source/app/src/main/java/starking/eccles/smartbike/: CommandBridge.java  CommandType.java  DeviceId.java  HotspotHelper.java  MainActivity.java  MessageThread.java  MessageType.java  NativeMessage.java  UdpDiscovery.java  VoiceRecognitionManager.java
android-app/source/app/src/main/res/layout/: activity_main.xml
android-app/source/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
android-app/source/app/src/main/res/values-night/: themes.xml
android-app/source/app/src/test/java/starking/eccles/smartbike/: ExampleUnitTest.java
android-app/source/gradle/: libs.versions.toml
android-app/source/gradle/wrapper/: gradle-wrapper.properties
docs/: README.md
firmware/: README.md
firmware/source/: .gitignore  CMakeLists.txt  LICENSE  PORT_NOTES.md  execute-tts-packager.py  idf_component.yml  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32
firmware/source/components/eccles/: CMakeLists.txt
firmware/source/components/eccles/include/: Audio.h  DeviceManager.h  Devices.h  Eccles.h  EcclesConfig.h  EcclesTTS.h  EcclesTypes.h  Executor.h  Executors.h  FileSystem.h  HardwareDevice.h  Pins.h  PowerManager.h  RuntimeMemory.h  StaticModel.h  Transport.h
firmware/source/components/eccles/src/: Audio.cpp  Bluetooth.cpp  Configuration.cpp  Conversation.cpp  DeviceExecutor.cpp  DeviceManager.cpp  Devices.cpp  EcclesTTS.cpp  EcclesTypes.cpp  Executor.cpp  ExecutorManager.cpp  FileSystem.cpp  HardwareDevice.cpp  Pins.cpp  PowerManager.cpp  RuntimeMemory.cpp  Transport.cpp
firmware/source/eccles/tools/: ReadME
firmware/source/eccles/tools/src/: AudioConfig.cpp  AudioConfig.h  Eccles.h  EcclesTypes.cpp  EcclesTypes.h  Model.h  WavFile.cpp  WavFile.h  main.cpp  staticModel.cpp  staticModel.h
firmware/source/littlefs_image/: StaticModel.eccles
firmware/source/main/: CMakeLists.txt  main.cpp
web-ui/: README.md  app.js  index.html  style.css
